--- a/factions/Winterguard.html
+++ b/factions/Winterguard.html
@@ -29,6 +29,25 @@
   </div>
   <main>
     <div class="wintergame">
+      <p>09 Dec 2022 <br>
+        Game against Rob at Element December Friday Night Event<br>
+       <ul>My Squad
+         <li>Crimson Dynamo</li>
+         <li>Ursa Major</li>
+         <li>Malekith</li>
+         <li>Red Guardian</li>
+       </ul>
+       <ul>Geds Squad
+         <li>Starlord</li>
+         <li>Rocket</li>
+         <li>Groot</li>
+         <li>Gamora</li>
+         <li>Ghost Rider</li>
+       </ul>
+       Win for Me on Demons and Hammers
+      </p>
+    </div>
+    <div class="wintergame">
       <p>14 Oct 2022 <br>
         Game against Ged at Element October Friday Night Event<br>
        <ul>My Squad
