--- a/factions/defenders.html
+++ b/factions/defenders.html
@@ -24,10 +24,20 @@
     <button class="characters"><a href="#">Scarlet Witch</a></button>
     <button class="characters"><a href="#">Wolverine</a></button>
     <button class="characters"><a href="#">Spiderman</a></button>
-    <button class="characters"><a href="#">Dardevil</a></button>
+    <button class="characters"><a href="#">Daredevil</a></button>
     <button class="characters"><a href="#">Elektra</a></button>
-    <button class="characters"><a href="#">Valkerie</a></button>
+    <button class="characters"><a href="#">Valkyrie</a></button>
     <button class="characters"><a href="#">Luke Cage</a></button>
+    <button class="characters"><a href="#">Ancient One</a></button>
+    <button class="characters"><a href="#">Clea</a></button>
+    <button class="characterslong"><a href="#">Dr Strange Sorcerer Supreme</a></button>
+    <button class="characters"><a href="#">Hawkeye</a></button>
+    <button class="characters"><a href="#">Hulk</a></button>
+    <button class="characters"><a href="#">Ironfist</a></button>
+    <button class="characters"><a href="#">Moon Knight</a></button>
+    <button class="characters"><a href="#">Blade</a></button>
+    <button class="characters"><a href="#">Magik</a></button>
+    <button class="characters"><a href="#">Wong</a></button>
   </div>
   <div id="winLossBar">
     <h2>Win = <span id="win"></span></h2>
