--- a/factions/hydra.html
+++ b/factions/hydra.html
@@ -36,6 +36,13 @@
       <img src="../images/factionPhotos/redSkull2crop.jpg" alt="Red Skull Master of Hydra">
     </div>
   </div>
+  <div class="lightbox" id="bob">
+    <a href="#" class="close">Close</a>
+    <div class="lightbox-content">
+      <img src="../images/factionPhotos/bob.jpg" alt="Bob Agent of Hydra of Hydra">
+    </div>
+  </div>
+  
   <div class="lightbox" id="strucker">
     <a href="#" class="close">Close</a>
     <div class="lightbox-content">
@@ -97,6 +104,26 @@
   </div>
 
   <main>
+    <div class="hydragame">
+      <p>25 Nov 2022 <br>
+       Game against Toby at Element Games<br>
+      <ul>My Squad
+        <li>Armin Zola</li>
+        <li>Crimson Dynamo</li>
+        <li>Bob</li>
+        <li>Baron Strucker</li>
+        <li>Red Skull Master of Hydra</li>
+      </ul>
+      <ul>Tobys Squad
+        <li>Dr Strange</li>
+        <li>Ironfist</li>
+        <li>Moonknight</li>
+        <li>Wong</li>
+        <li>Black Panther</li>
+      </ul>
+      Win to Me on Research Station and Infinity Formula
+     </p>
+     </div>
     <div class="hydragame">
       <p>18 Nov 2022 <br>
        Game against James at Element Games<br>
