--- a/games/friendly.html
+++ b/games/friendly.html
@@ -161,6 +161,33 @@
       <td>Win</td>
       <td><a href="../factions/Hydra.html">Here</a></td>
     </tr>
+    <tr>
+      <td>Hydra</td>
+      <td>17</td>
+      <td>Infinity Formula</td>
+      <td>Research Station</td>
+      <td>Defenders</td>
+      <td>Win</td>
+      <td><a href="../factions/Hydra.html">Here</a></td>
+    </tr>
+    <tr>
+      <td>Spiderfoes</td>
+      <td>18</td>
+      <td>Sword Base</td>
+      <td>Hammers</td>
+      <td>Black Order</td>
+      <td>Win</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr>
+    <tr>
+      <td>Spiderfoes</td>
+      <td>19</td>
+      <td>Cosmic Vaults</td>
+      <td>Senetors</td>
+      <td>Guardians</td>
+      <td>Win</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr>
   </table>
   <button><a href="../index.html">Home</a></button>
     
