--- a/games/tts.html
+++ b/games/tts.html
@@ -92,7 +92,7 @@
       <th>Link</th>
     </tr>
     <tr>
-      <td>10 Oct 22</td>
+      <td>10 Oct 2022</td>
       <td>Hydra</td>
       <td>18</td>
       <td>Extremis</td>
@@ -102,7 +102,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>
     <tr>
-      <td>11 Oct 22</td>
+      <td>11 Oct 2022</td>
       <td>Defenders</td>
       <td>18</td>
       <td>Demons</td>
@@ -112,7 +112,7 @@
       <td><a href="../factions/defenders.html">here</a></td>
     </tr> 
      <tr>
-      <td>11 Oct 22</td>
+      <td>11 Oct 2022</td>
       <td>Defenders</td>
       <td>15</td>
       <td>Gamma</td>
@@ -122,7 +122,7 @@
       <td><a href="../factions/defenders.html">here</a></td>
     </tr>
     <tr>
-      <td>13 Oct 22</td>
+      <td>13 Oct 2022</td>
       <td>Defenders</td>
       <td>20</td>
       <td>Terrigen</td>
@@ -132,7 +132,7 @@
       <td><a href="../factions/defenders.html">here</a></td>
     </tr>     
     <tr>
-      <td>16 Oct 22</td>
+      <td>16 Oct 2022</td>
       <td>Hydra</td>
       <td>17</td>
       <td>Mayor Fisk</td>
@@ -142,7 +142,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr> 
     <tr>
-      <td>16 Oct 22</td>
+      <td>16 Oct 2022</td>
       <td>Hydra</td>
       <td>20</td>
       <td>Terrigen</td>
@@ -152,7 +152,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>  
     <tr>
-      <td>20 Oct 22</td>
+      <td>20 Oct 2022</td>
       <td>Hydra</td>
       <td>17</td>
       <td>Mayor Fisk</td>
@@ -162,7 +162,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>   
     <tr>
-      <td>22 Oct 22</td>
+      <td>22 Oct 2022</td>
       <td>Shield</td>
       <td>17</td>
       <td>Extremis</td>
@@ -172,7 +172,7 @@
       <td><a href="../factions/shield.html">here</a></td>
     </tr> 
     <tr>
-      <td>23 Oct 22</td>
+      <td>23 Oct 2022</td>
       <td>Sentinels</td>
       <td>20</td>
       <td>Mutant Madman</td>
@@ -182,7 +182,7 @@
       <td><a href="../factions/sentinels.html">here</a></td>
     </tr>
     <tr>
-      <td>03 Nov 22</td>
+      <td>03 Nov 2022</td>
       <td>Hydra</td>
       <td>19</td>
       <td>Demons</td>
@@ -192,7 +192,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>
     <tr>
-      <td>03 Nov 22</td>
+      <td>03 Nov 2022</td>
       <td>Hydra</td>
       <td>18</td>
       <td>Intrusions</td>
@@ -202,7 +202,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>
     <tr>
-      <td>09 Nov 22</td>
+      <td>09 Nov 2022</td>
       <td>Hydra</td>
       <td>15</td>
       <td>Gamma</td>
@@ -212,7 +212,7 @@
       <td><a href="../factions/hydra.html">here</a></td>
     </tr>   
     <tr>
-      <td>10 Nov 22</td>
+      <td>10 Nov 2022</td>
       <td>Hydra</td>
       <td>17</td>
       <td>Mayor Fisk</td>
@@ -220,7 +220,107 @@
       <td>WebWarriors</td>
       <td>Win</td>
       <td><a href="../factions/hydra.html">here</a></td>
+    </tr>
+    <tr>
+      <td>21 Nov 2022</td>
+      <td>A Force</td>
+      <td>17</td>
+      <td>Gamma</td>
+      <td>Spiders</td>
+      <td>WebWarriors</td>
+      <td>Win</td>
+      <td><a href="../factions/aforce.html">here</a></td>
+    </tr>
+    <tr>
+      <td>26 Nov 2022</td>
+      <td>Spiderfoes</td>
+      <td>19</td>
+      <td>Intrusions</td>
+      <td>Cubes</td>
+      <td>Defenders</td>
+      <td>Loss</td>
+      <td><a href="../factions/spiderfoes.html">here</a></td>
+    </tr>   
+    <tr>
+      <td>07 Dec 2022</td>
+      <td>Criminal syndicate</td>
+      <td>20</td>
+      <td>Scoundrels</td>
+      <td>Cubes</td>
+      <td>Uncanny X-Men</td>
+      <td>Win</td>
+      <td><a href="../factions/criminalsyndicate.html">here</a></td>
     </tr>  
+    <tr>
+      <td>11 Dec 2022</td>
+      <td>Spiderfoes</td>
+      <td>17</td>
+      <td>Infinity Formula</td>
+      <td>Kree Core</td>
+      <td>Avengers</td>
+      <td>Loss</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr>
+    <tr>
+      <td>11 Dec 2022</td>
+      <td>Spiderfoes</td>
+      <td>17</td>
+      <td>Sword Base</td>
+      <td>Senetors</td>
+      <td>Avengers</td>
+      <td>Win</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr>
+    <tr>
+      <td>14 Dec 2022</td>
+      <td>Spiderfoes</td>
+      <td>16</td>
+      <td>Cosmic Vaults</td>
+      <td>Kree Core</td>
+      <td>X-Men</td>
+      <td>Win</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr> 
+    <tr>
+      <td>15 Dec 2022</td>
+      <td>Spiderfoes</td>
+      <td>17</td>
+      <td>Infinity Formula</td>
+      <td>Pummels</td>
+      <td>Defenders</td>
+      <td>Loss</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr> 
+    <tr>
+      <td>15 Dec 2022</td>
+      <td>Spiderfoes</td>
+      <td>15</td>
+      <td>Sword Base</td>
+      <td>Hammers</td>
+      <td>Defenders</td>
+      <td>Win</td>
+      <td><a href="../factions/spiderfoes.html">Here</a></td>
+    </tr> 
+    <tr>
+      <td>19 Dec 2022</td>
+      <td>Cabal</td>
+      <td>18</td>
+      <td>Gamma</td>
+      <td>Hammers</td>
+      <td>Wakanda</td>
+      <td>Loss</td>
+      <td><a href="../factions/cabal.html">Here</a></td>
+    </tr> 
+    <tr>
+      <td>19 Dec 2022</td>
+      <td>Cabal</td>
+      <td>17</td>
+      <td>Infinity Formula</td>
+      <td>Hammers</td>
+      <td>Wakanda</td>
+      <td>Loss</td>
+      <td><a href="../factions/cabal.html">Here</a></td>
+    </tr> 
   </table>
   <p id="result" style="color: white;"></p>
   <button><a href="../index.html">Home</a></button>
