--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/sidebar.css">
   <style>
+    header{
+      max-width: 100%;
+    }
     body{
       margin-top: 135px;
       background-color: black;
@@ -70,14 +73,15 @@
   </header> 
   <nav>
       <ul>
-        <li style="background-color:white;">Factions</li>
-        <li id="aforce" a href="#">A-Force</li>
+        <a href="factions/aforce.html"><li id="aforce"> A Force</li></a>
         <li id="asgard" a href="#" >Asgard</li>
-        <li id="avengers" a href="#" >Avengers</li>
-        <li id="blackorder" a href="#">Black Order</li>            <li id="brotherhood" a href="#">Brotherhood of Mutants</li>
+        <a href="factions/avengers.html"><li id="avengers"> Avengers </li></a>
+        <li id="blackorder" a href="#">Black Order</li>            
+        <li id="brotherhood" a href="#">Brotherhood of Mutants</li>
+        <a href="factions/cabal.html"><li id="cabal"> Cabal </li></a>
         <li id="convocation" a href="#">Convocation</li>
-        <li id="crimsyn" a href="#">Criminal Syndicate</li>
-        <li id="darkdimension" a href="#">Dark Dimension</li>
+        <a href="factions/criminalsyndicate.html"><li id="crimsyn"> Criminal Syndicate </li></a>
+        <a href="factions/darkdimension.html"><li id="darkdimension"> Dark Dimension </li></a>
         <a href="factions/defenders.html"><li id="defenders"> Defenders</li></a>
         <li id="guardians" a href="#">Guardians of the Galaxy</li>
         <a href="factions/hydra.html"><li id="hydra"> Hydra</li></a>
@@ -85,9 +89,11 @@
         <li id="midnightsons" a href="#">Midnight Sons</li>
         <a href="factions/sentinels.html"><li id="sentinels">Sentinels</li></a>
         <a href="factions/shield.html"><li id="shield">S.H.I.E.L.D </li></a>
-        <li id="spiderfoes" a href="#">Spiderfoes</li>
+        <a href="factions/spiderfoes.html"><li id="spiderfoes">Spider Foes</li></a>
         <li id="xmen" a href="#">Uncanny X-Men</li>
         <li id="wakanda" a href="#">Wakanda</li>
+        <li id="weaponx" a href="#">Weapon X</li>
+        <li id="webwarriors" a href="#">Web Warriors</li>
         <a href="factions/Winterguard.html"><li id="winterguard"> Winter Guard </li></a>
         <li id="xforce" a href="#">X-force</li>
         
@@ -104,6 +110,6 @@
   <hr>
   <p class="foot">About Me</p>
   <p class="foot">Links</p>
-  <p class="foot">Contact</p>
+  <a href="mailto:undercoverdemon@gmail.com"><p class="foot">Contact</p></a>
 </body>
 </html>
